<resources>
    <string name="app_name">food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="food_image_desc">Изображение блюда</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant">Мой ресторан</string>
    <string name="hello_explore_your_dream_food">Испробуйте еду своей мечты.</string>
    <string name="register">Зарегестрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="full_name">Полное имя</string>
    <string name="email_adress">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="already_registered">Уже зарегестрирован?</string>
    <string name="you_dont_have_acc">У вас нету аккаунта?</string>
    <string name="create">Создайте!</string>
    <string name="home">Главная</string>
    <string name="favourite">Избраное</string>
    <string name="daily_meal">Ежедневный обед</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">Моя корзина</string>
    <string name="lord_harizon_mail_ru">lord.harizon@mail.ru</string>
    <string name="s_t_c">S T C</string>
    <string name="lordharizon">LordHarizon</string>
    <string name="log_out">Выйти</string>
    <string name="search">Поиск блюд</string>
    <string name="hello">Привет Lord</string>
    <string name="what_are_u_want">Чего желаете?</string>
    <string name="pizza">Пицца</string>
    <string name="product_name">Название продукта</string>
    <string name="time">10:00-23:00</string>
    <string name="_5_0">5.0</string>
    <string name="min_35">Min - 35$</string>
    <string name="Dinner">Ужин</string>
    <string name="Description">Описание Описание Описание</string>
    <string name="Discount">Скидка</string>
    <string name="name">Name</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="order_now">Закажи сейчас</string>
    <string name="order">Заказать</string>
    <string name="my_cart2">Моя корзина</string>
    <string name="total">Итого</string>
    <string name="_180">180$</string>
    <string name="_5_02">5.0</string>
    <string name="_100">100</string>
</resources>