<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailed_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/coffe"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:singleLine="true"
                android:maxLines="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/name"
                android:id="@+id/detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:contentDescription="@string/my_cart"
                    android:id="@+id/imageView7"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/detailed_rating"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/detailed_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_02"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:contentDescription="@string/my_cart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/dollarsymbol"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_500" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
