<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/mediumGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_hor_rec"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_ver_rec"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:layout_height="760dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_hor_rec" />


        <EditText
            android:id="@+id/editText4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@drawable/search_bg"
            android:drawableRight="@drawable/baseline_edit_24"
            android:drawablePadding="9dp"
            android:fontFamily="@font/lobster"
            android:hint="@string/search"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/search_bg"
            android:padding="10dp"
            android:src="@drawable/baseline_emoji_emotions_24"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/lobster"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/lobster"
            android:text="@string/what_are_u_want"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.core.widget.NestedScrollView>